# parachain-template-test

./: Cargo.toml  chain_spec.json  new_spec.json
pallets/digital-credential/: Cargo.toml
pallets/digital-credential/src/: lib.rs
pallets/use-storage/: Cargo.toml
pallets/use-storage/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/configs/: mod.rs
