[package]
name = "pallet-digital-credential"
description = "Generate identity credentials for all accounts."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
# 基础编解码（从工作区继承）
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# 框架基础（从工作区继承）
frame = { workspace = true, features = ["runtime"] }
log = { workspace = true }

# --- 关键修改：直接引用 polkadot-sdk 大包 ---
# 我们在 features 列表中添加了 "sp-io"，这对获取时间戳至关重要
polkadot-sdk = { version = "2503.0.1", default-features = false, features = [
    "sp-core", 
    "sp-runtime", 
    "sp-io",        # <--- 新增：这里开启 sp-io 功能
    "frame-support", 
    "frame-system", 
    "pallet-timestamp"
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame/std",
    "polkadot-sdk/std", # 这里会自动处理 sp-io 的 std 模式
    "log/std",
]